--- a/index.html
+++ b/index.html
@@ -7,12 +7,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="text/javascript" src="https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/global.css" />
 </head>
 <body>
   <div class="container">
-    <!-- Dynamic Buttons Go Here -->
+    <br /><br />
+    <div class="well">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="form-group">
+            <label for="n1">Number 1</label>
+            <input type="text" id="n1" class="form-control" />
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group">
+            <label for="n2">Number 2</label>
+            <input type="text" id="n2" class="form-control" />
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group btn-calc-margin">
+            <input type="button" class="btn btn-default btn-calc" value="+" />
+            <input type="button" class="btn btn-default btn-calc" value="-" />
+            <input type="button" class="btn btn-default btn-calc" value="/" />
+            <input type="button" class="btn btn-default btn-calc" value="*" />
+            <input type="button" class="btn btn-default btn-calc" value="C" />
+            <input type="button" class="btn btn-default btn-num" value="1" />
+            <input type="button" class="btn btn-default btn-num" value="2" />
+            <input type="button" class="btn btn-default btn-num" value="3" />
+            <input type="button" class="btn btn-default btn-num" value="Four" />
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <script type="text/javascript" src="js/control-flow.js"></script>
+  <script type="text/javascript" src="js/calc.js"></script>
 </body>
 </html>
